--- a/projects.html
+++ b/projects.html
@@ -21,9 +21,12 @@
                 <h1 class="top">— stuff i've made ! ☆ﾐ</h1>
             </div>
         </header>
-            <iframe src="https://editor.p5js.org/zoowee/embed/GHHHBsHXi" height = 400 width = 400></iframe>
-            <iframe src="https://editor.p5js.org/zoowee/embed/nd15Ks69D" height = 400 width = 400></iframe>
-            <iframe src="https://editor.p5js.org/zoowee/embed/ZmJ8dDcaz" height = 400 width = 400></iframe>
+            <a href = "./projects/clock.html">
+            <img class = "projects" src = "https://www.amara.com/static/uploads/images-2/products/x/huge/1167712/number-three-echo-wall-clock-pink-956245.jpg">
+            <a href = "./projects/snake.html">
+            <img class = "projects" src = "https://i.pinimg.com/originals/ac/6c/ca/ac6cca0dbe052f63ec565e61872d9025.png">
+            <a href = "./projects/superkitty.html">
+            <img class = "projects" src = "./imgsuperkitty/start.png">
         <footer>
             <h6>jerica ju © 2019</h6>
         </footer>
