added all projects

--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
         <link rel="icon" type="image/png" href="http://cdn130.picsart.com/286203394073211.png">
         <link href="https://fonts.googleapis.com/css?family=Homemade+Apple&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Sacramento&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     
     <body>
@@ -21,11 +21,11 @@
                 <h1 class="top">— stuff i've made ! ☆ﾐ</h1>
             </div>
         </header>
-            <a href = "./projects/clock.html">
+            <a href = "clock.html">
             <img class = "projects" src = "https://www.amara.com/static/uploads/images-2/products/x/huge/1167712/number-three-echo-wall-clock-pink-956245.jpg">
-            <a href = "./projects/snake.html">
+            <a href = "snake.html">
             <img class = "projects" src = "https://i.pinimg.com/originals/ac/6c/ca/ac6cca0dbe052f63ec565e61872d9025.png">
-            <a href = "./projects/superkitty.html">
+            <a href = "superkitty.html">
             <img class = "projects" src = "./imgsuperkitty/start.png">
         <footer>
             <h6>jerica ju © 2019</h6>
