--- a/projects.html
+++ b/projects.html
@@ -22,13 +22,13 @@
             </div>
         </header>
             <a href = "clock.html">
-            <img class = "projects" src = "https://www.amara.com/static/uploads/images-2/products/x/huge/1167712/number-three-echo-wall-clock-pink-956245.jpg">
+            <img class = "projects" src = "https://www.amara.com/static/uploads/images-2/products/x/huge/1167712/number-three-echo-wall-clock-pink-956245.jpg" height = "400">
             <a href = "snake.html">
-            <img class = "projects" src = "https://i.pinimg.com/originals/ac/6c/ca/ac6cca0dbe052f63ec565e61872d9025.png">
+            <img class = "projects" src = "https://i.pinimg.com/originals/ac/6c/ca/ac6cca0dbe052f63ec565e61872d9025.png" height = "400">
             <a href = "superkitty.html">
-            <img class = "projects" src = "./imgsuperkitty/start.png">
+            <img class = "projects" src = "./imgsuperkitty/start.png" height = "400">
         <footer>
-            <h6>jerica ju © 2019</h6>
+            <h6>jerica ju copyright &copy 2019-2020</h6>
         </footer>
     </body>
 </html>
