--- a/superkitty.html
+++ b/superkitty.html
@@ -12,7 +12,19 @@
   </head>
   
   <body>
-    <h1>SuperKitty</h1>
+    <header>
+      <div class="navbar">
+        <nav>
+          <ul>
+            <li class="current"><a href="projects.html">PORTFOLIO</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="index.html">HOME</a></li>
+          </ul>
+        </nav>
+          <h1 class="top">— super kitty ! ☆ﾐ</h1>
+      </div>
+    </header>
+
     <script type="text/processing">
       PImage bg, cat, botPipe, topPipe, start;
       int bgx, bgy, cx, cy, g, Vcy;
@@ -168,9 +180,10 @@
         text("Score: " + score, width - 170, 40);
         text("High Score: " + highScore, width - 170, 80);
       }
-
     </script>
-    <canvas id="sketch" style="border: 1px solid black;"></canvas>  
+    <canvas id="sketch" style="border: 1px solid black;"></canvas>
+    <footer>
+      <h6>jerica ju copyright &copy 2019-2020</h6>
+    </footer>
   </body>
-  
 </html>
