--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <link rel="icon" type="image/png" href="http://cdn130.picsart.com/286203394073211.png">
         <link href="https://fonts.googleapis.com/css?family=Homemade+Apple&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Sacramento&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     
     <body>
@@ -25,7 +25,7 @@
                 hii ! im a freshman at citrus valley high school . this website is for my ap computer science principles class .
             </h1>
         <footer>
-            <h6>jerica ju © 2019</h6>
+            <h6>jerica ju copyright &copy 2019-2020</h6>
         </footer>
     </body>
 </html>
