--- a/clock.html
+++ b/clock.html
@@ -5,7 +5,7 @@
         <link rel="icon" type="image/png" href="http://cdn130.picsart.com/286203394073211.png">
         <link href="https://fonts.googleapis.com/css?family=Homemade+Apple&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Sacramento&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     
     <body>
@@ -23,7 +23,7 @@
         </header>
             <iframe class = "project" src="https://editor.p5js.org/zoowee/embed/nd15Ks69D" height = 400 width = 400></iframe>
         <footer>
-            <h6>jerica ju © 2019</h6>
+            <h6>jerica ju copyright &copy 2019-2020</h6>
         </footer>
     </body>
 </html>
