--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" type="image/png" href="http://cdn130.picsart.com/286203394073211.png">
         <link href="https://fonts.googleapis.com/css?family=Homemade+Apple&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Sacramento&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     
     <body>
@@ -22,7 +22,6 @@
             </div>
         </header>
             <br>
-            <h5>y e s</h5>
             <a href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ">
             <img class = "rick" src = "https://live.staticflickr.com/5343/7170292334_062c439342_b.jpg">
             <a href = "https://disneynow.com/shows/kim-possible">
@@ -31,7 +30,7 @@
             <img class = "time" src = "https://images.unsplash.com/photo-1524678714210-9917a6c619c2?ixlib=rb-1.2.1&w=1000&q=80">
         <footer>
         <a></a>
-            <h6>jerica ju © 2019</h6>
+            <h6>jerica ju copyright &copy 2019-2020</h6>
         </footer>
     </body>
 </html>
