--- a/drawingapp.html
+++ b/drawingapp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>⋆ ˚｡⋆୨୧˚ Portfolio ˚୨୧⋆｡˚ ⋆</title>
+        <title>⋆ ˚｡⋆୨୧˚ Drawing App ˚୨୧⋆｡˚ ⋆</title>
         <link rel="icon" type="image/png" href="http://cdn130.picsart.com/286203394073211.png">
         <link href="https://fonts.googleapis.com/css?family=Homemade+Apple&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Sacramento&display=swap" rel="stylesheet">
@@ -18,18 +18,10 @@
                         <li><a href="index.html">HOME</a></li>
                     </ul>
                 </nav>
-                <h1 class="top">— stuff i've made ! ☆ﾐ</h1>
+                <h1 class="top">— drawing app ! ☆ﾐ</h1>
             </div>
         </header>
-            <h1> </h1>
-            <a href = "clock.html">
-            <img class = "projects" src = "https://www.amara.com/static/uploads/images-2/products/x/huge/1167712/number-three-echo-wall-clock-pink-956245.jpg" height = "200">
-            <a href = "snake.html">
-            <img class = "projects" src = "https://i.pinimg.com/originals/ac/6c/ca/ac6cca0dbe052f63ec565e61872d9025.png" height = "200">
-            <a href = "superkitty.html">
-            <img class = "projects" src = "./imgsuperkitty/start.png" height = "200">
-            <a href = "drawingapp.html">
-            <h1>DRAWING APP</h1>
+            <iframe class = "project" src="https://editor.p5js.org/zoowee/embed/X9roVRp5" height = 700 width = 500></iframe>
         <footer>
             <h6>jerica ju copyright &copy 2019-2020</h6>
         </footer>
