--- a/about.html
+++ b/about.html
@@ -25,7 +25,9 @@
                 hii ! im a freshman at citrus valley high school . this website is for my ap computer science principles class .
             </h1>
         <footer>
-            <h6>jerica ju copyright &copy 2019-2020</h6>
+            <div class = "footer">
+                <h6>jerica ju copyright &copy 2019-2020</h6>
+            </div>
         </footer>
     </body>
 </html>
