--- a/index.html
+++ b/index.html
@@ -22,15 +22,13 @@
             </div>
         </header>
             <br>
-            <a href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-            <img class = "rick" src = "https://live.staticflickr.com/5343/7170292334_062c439342_b.jpg">
-            <a href = "https://disneynow.com/shows/kim-possible">
-            <img class = "awkim" src = "https://66.media.tumblr.com/0826310d4cb97463daed5d5b1c704f3d/tumblr_pjjuzebwSO1xst2vko1_500.gifv">
-            <a href = "https://www.youtube.com/watch?v=iMAKYI4RJsY">
-            <img class = "time" src = "https://images.unsplash.com/photo-1524678714210-9917a6c619c2?ixlib=rb-1.2.1&w=1000&q=80">
+            <img class = "glasses" src = "https://cdn130.picsart.com/272930405001211.png?type=webp&to=min&r=640">
+            <h1 class = "me" >u've reached no braincell land ; population - u</h1>
+            <img class = "circles" src = "./img/circles.png">
         <footer>
-        <a></a>
-            <h6>jerica ju copyright &copy 2019-2020</h6>
+            <div class = "footer">
+                <h6>jerica ju copyright &copy 2019-2020</h6>
+            </div>
         </footer>
     </body>
 </html>
