--- a/snake.html
+++ b/snake.html
@@ -23,7 +23,9 @@
         </header>
             <iframe class = "project" src="https://editor.p5js.org/zoowee/embed/ZmJ8dDcaz" height = 400 width = 400></iframe>
         <footer>
-            <h6>jerica ju copyright &copy 2019-2020</h6>
+            <div class = "footer">
+                <h6>jerica ju copyright &copy 2019-2020</h6>
+            </div>
         </footer>
     </body>
 </html>
