--- a/drawingapp.html
+++ b/drawingapp.html
@@ -23,7 +23,9 @@
         </header>
             <iframe class = "project" src="https://editor.p5js.org/zoowee/embed/X9roVRp5" height = 700 width = 500></iframe>
         <footer>
-            <h6>jerica ju copyright &copy 2019-2020</h6>
+            <div class = "footer">
+                <h6>jerica ju copyright &copy 2019-2020</h6>
+            </div>
         </footer>
     </body>
 </html>
