--- a/projects.html
+++ b/projects.html
@@ -21,17 +21,19 @@
                 <h1 class="top">— stuff i've made ! ☆ﾐ</h1>
             </div>
         </header>
-            <h1> </h1>
             <a href = "clock.html">
-            <img class = "projects" src = "https://www.amara.com/static/uploads/images-2/products/x/huge/1167712/number-three-echo-wall-clock-pink-956245.jpg" height = "200">
+                <img class = "projects" src = "./img/clock.png" height = "200">
             <a href = "snake.html">
-            <img class = "projects" src = "https://i.pinimg.com/originals/ac/6c/ca/ac6cca0dbe052f63ec565e61872d9025.png" height = "200">
+                <img class = "projects" src = "./img/snake.png" height = "200">
             <a href = "superkitty.html">
-            <img class = "projects" src = "./imgsuperkitty/start.png" height = "200">
+                <img class = "projects" src = "./imgsuperkitty/start.png" height = "200">
             <a href = "drawingapp.html">
-            <h1>DRAWING APP</h1>
+                <img class = "projects" src = "./img/jjPaint.png" height = "200">
+            </a>
         <footer>
-            <h6>jerica ju copyright &copy 2019-2020</h6>
+            <div class = "footer">
+                <h6>jerica ju copyright &copy 2019-2020</h6>
+            </div>
         </footer>
     </body>
 </html>
