--- a/superkitty.html
+++ b/superkitty.html
@@ -25,7 +25,7 @@
       </div>
     </header>
 
-    <script class = "project" type="text/processing">
+    <script type="text/processing">
       PImage bg, cat, botPipe, topPipe, start;
       int bgx, bgy, cx, cy, g, Vcy;
       int[] pipeX, pipeY;
@@ -183,9 +183,9 @@
     </script>
     <canvas id="sketch" style="border: 1px solid black;"></canvas>
     <footer>
-            <div class = "footer">
-                <h6>jerica ju copyright &copy 2019-2020</h6>
-            </div>
-        </footer>
+      <div class = "footer">
+        <h6>jerica ju copyright &copy 2019-2020</h6>
+      </div>
+    </footer>
   </body>
 </html>
